docs: add create opening swagger docs
